src/objects/Apttus_Config2__CustomMessage__c.object
<CustomObject>
    <description>Used to provide translation for messages used in custom objects</description>
    <fields>
        <fullName>Apttus_Config2__MessageTag__c</fullName>
        <label>Message Tag</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <label>Message</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message_de__c</fullName>
        <label>Message_de</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message_en__c</fullName>
        <label>Message_en</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message_fr__c</fullName>
        <label>Message_fr</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message_it__c</fullName>
        <label>Message_it</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message_ja__c</fullName>
        <label>Message_ja</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceObjectId__c</fullName>
        <label>Source Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Message</label>
    <nameField>
        <label>Custom Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>